# AlgoPulse

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh  vcpkg.json
.github/workflows/: cmake-single-platform.yml
config/: config.ini
data/: README.md
data/gmData/: DailyBar.h5  StaticInfo.h5
data/script/: config.py  dailyBarJob.py  main.py  minuteBarJob.py  staticInfoJob.py  tableDefs.py  tickJob.py
src/: CMakeLists.txt  main.cpp
src/algo/: Algo.cpp  Algo.h  AlgoConstants.h  AlgoOrder.cpp  AlgoOrder.h  AlgoPerformance.cpp  AlgoPerformance.h  AlgoPlacer.cpp  AlgoPlacer.h  AlgoTrader.cpp  AlgoTrader.h
src/algo_protocal/: AlgoMessages.proto
src/client/: CMakeLists.txt  ClientApi.cpp  ClientApi.h  ClientApiImpl.cpp  ClientApiImpl.h  SendContext.cpp  SendContext.h
src/client/example/: clientTest.cpp
src/common/: Configs.cpp  Configs.h  H5DataTypes.cpp  H5DataTypes.h  IdGenerator.h  KeepAlive.h  MemoryContainer.h  StockDataManager.cpp  StockDataManager.h  StockDataTypes.cpp  StockDataTypes.h  common.cpp  common.h  typedefs.h  waiting.cpp  waiting.h
src/orderbook/: AssetInfo.h  Order.cpp  Order.h  OrderBook.h  OrderBookSim.cpp  OrderBookSim.h  OrderService.cpp  OrderService.h  PositionInfo.h
src/quote/: LimitedQueue.cpp  LimitedQueue.h  MarketDepth.cpp  MarketDepth.h  QuoteFeed.cpp  QuoteFeed.h  QuoteFeedInternet.cpp  QuoteFeedInternet.h  QuoteFeedLive.h  QuoteFeedReplay.cpp  QuoteFeedReplay.h  QuoteFeedService.cpp  QuoteFeedService.h
src/services/: AlgoService.cpp  AlgoService.h  ContextService.cpp  ContextService.h  StorageService.cpp  StorageService.h  TCPSession.cpp  TCPSession.h
src/shot/: ShotSignal.cpp  ShotSignal.h  ShotTrader.cpp  ShotTrader.h
